# wt_analytics

./: .gitignore  Cargo.toml  README.md
migrations/2020-06-12-131307_create_chapters/: up.sql
migrations/2020-06-12-132047_create_visits/: up.sql
migrations/2020-06-26-115753_create_visits_timestamp_index/: down.sql  up.sql
src/: allowed_origin.rs  database.rs  error.rs  main.rs  models.rs  schema.rs
