[package]
name = "wt_analytics"
version = "0.1.0"
authors = ["Rin Tepis <scucumber@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
serde = "1.0.111"
indoc = "0.3"
